--- a/package.json
+++ b/package.json
@@ -32,12 +32,14 @@
   "license": "ISC",
   "dependencies": {
     "@useoptic/express-middleware": "^0.0.5",
+    "abort-controller": "^3.0.0",
     "agenda": "^3.1.0",
     "agendash": "^2.1.1",
     "argon2": "^0.27.0",
     "body-parser": "^1.20.2",
     "celebrate": "^13.0.3",
     "cors": "^2.8.5",
+    "cypress": "^13.6.6",
     "dotenv": "^8.2.0",
     "errorhandler": "^1.5.1",
     "event-dispatch": "^0.4.1",
@@ -66,14 +68,16 @@
     "@types/lodash": "^4.14.161",
     "@types/mongoose": "^5.7.36",
     "@types/node": "^20.11.19",
+    "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^4.2.0",
     "@typescript-eslint/parser": "^4.2.0",
     "eslint": "^7.9.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "jest": "^26.4.2",
+    "jest": "^26.6.3",
     "nodemon": "^2.0.4",
     "prettier": "^3.2.5",
+    "supertest": "^6.3.4",
     "ts-jest": "^26.4.0",
     "ts-node": "^9.0.0",
     "tsconfig-paths": "^3.11.0",
